 # [#21476] Not using correct Primary Key while saving
 # [#21579] E_STRICT error in JCacheCallback due to modRelatedItemsHelper::getList() being non-static
 # [#21597] New Menu Item - using filter in modal
 # [#21616] Page scrolls to top when click on Contact Slider
 # [#21643] Login screen with google chrome 5.0.375 fields misaligned
 # [#21710] Root user notice only on username

08-Aug-2010 Jean-Marie Simonet
 # [#21387] Weird Display Issue Administrator Template In Safari 4 & 5

08-Aug-2010 Ron Severdia
 # Cleaned up Atomic template (ready to go once sample data is committed).
 
07-Aug-2010 Jean-Marie Simonet
 # [#21750] Default module position
 # [#21744] Implementing drill-down options for weblinks and newsfeeds categorieS menu items
 # [#21749] IE7 patches to the Options modal. Thanks Andrea.
 # [#21628] unpublish core extensions. Thanks Mark
 
06-Aug-2010 Ian MacLennan
 # [#21598] Unable to logout ( front end ) if cache enabled
 # [#21630] Dropdown order in plug in manager
 # [#21632] Dropdown order in article manager
 # [#21633] Dropdown order in category manager
 # [#21634] Dropdown order in menu manager
 # [#21637] Dropdown order in module manager
 # [#21667] Menu manager : "Save & New" and "Save as copy" tasks are not implemented

06-Aug-2010 Jean-Marie Simonet
 # [#21740] Media Manager Submenu not indicating active option. Thanks Andrea.

05-Aug-2010 Jean-Marie Simonet
 # [#21599] Featured articles - article link to parent category - 500 error. Thanks Mathavan
 # [#21433] Title disappear when you select the menu item type. Thanks Bill
 #$ [#21358] Breadcrumbs "You are here" text displays regardless of Breadcrumbs settings. Thanks Michael.
 #$ [#21731] Newsfeeds /menu-items params correction + changes to weblinks. Thanks Bill.

04-Aug-2010 Jean-Marie Simonet
 [#21662] Single contact view not treating category access issue correctly. Thanks Elin.
 
04-Aug-2010 Andrew Eddie