@@ -21,14 +21,6 @@
 				title="JACTION_MANAGE"
 				description="JACTION_MANAGE_COMPONENT_DESC" />
 			<action
-				name="core.create"
-				title="JACTION_CREATE"
-				description="JACTION_CREATE_COMPONENT_DESC" />
-			<action
-				name="core.delete"
-				title="JACTION_DELETE"
-				description="JACTION_DELETE_COMPONENT_DESC" />
-			<action
 				name="core.edit"
 				title="JACTION_EDIT"
 				description="JACTION_EDIT_COMPONENT_DESC" />
